--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
+    "vue-multiselect": "^2.1.6",
     "vue-property-decorator": "^8.4.2",
     "vue-router": "^3.2.0"
   },
