--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.5.2",
     "bootstrap-vue": "^2.16.0",
     "core-js": "^3.6.5",
+    "firebase": "^7.17.2",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-multiselect": "^2.1.6",
